--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -8,3 +8,13 @@ dt.sig-object {
     margin: 10px;
     display: inline-block;
 }
+
+h2[id^="module-"] {
+    font-size: 150%;
+    color: rgb(244, 246, 248);
+    background-color:  rgba(17, 46, 69, 0.713); /* Light purple background color */
+    /*border: 2px solid purple;*/
+    padding: 20px;
+    margin: 5px;
+    display: inline-block;
+}
