--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -13,7 +13,7 @@ dt.sig-object {
 h2 {
     font-size: 120%;
     color: rgb(244, 246, 248);
-    background-color:  rgba(17, 46, 69, 0.713); /* Light purple background color */
+    background-color:  #13676B; /* Light purple background color */
     /*border: 2px solid purple;*/
     padding: 20px;
 }
