--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -17,3 +17,11 @@ h2 {
     /*border: 2px solid purple;*/
     padding: 20px;
 }
+
+/* h1 {
+    font-size: 120%;
+    color: rgb(161, 15, 15);
+    background-color:  #603E63; /* Light purple background color */
+    /*border: 2px solid purple;*/
+    /*padding: 20px;
+} */
